edgevox-onnx/c-api/c-api.h


typedef struct EdgevoxOnnxFeatureConfig {
  int32_t sample_rate;
  int32_t feature_dim;
} EdgevoxOnnxFeatureConfig;
typedef struct EdgevoxOnnxOfflineTransducerModelConfig {
  const char *encoder;
  const char *decoder;
  const char *joiner;
} EdgevoxOnnxOfflineTransducerModelConfig;
typedef struct EdgevoxOnnxOfflineParaformerModelConfig {
  const char *model;
} EdgevoxOnnxOfflineParaformerModelConfig;
typedef struct EdgevoxOnnxOfflineNemoEncDecCtcModelConfig {
  const char *model;
} EdgevoxOnnxOfflineNemoEncDecCtcModelConfig;
typedef struct EdgevoxOnnxOfflineWhisperModelConfig {
  const char *encoder;
  const char *decoder;
  const char *language;
  const char *task;
  int32_t tail_paddings;
  int32_t enable_token_timestamps;
  int32_t enable_segment_timestamps;
} EdgevoxOnnxOfflineWhisperModelConfig;
typedef struct EdgevoxOnnxOfflineCanaryModelConfig {
  const char *encoder;
  const char *decoder;
  const char *src_lang;
  const char *tgt_lang;
  int32_t use_pnc;
} EdgevoxOnnxOfflineCanaryModelConfig;
typedef struct EdgevoxOnnxOfflineCohereTranscribeModelConfig {
  const char *encoder;
  const char *decoder;
  const char *language;
  int32_t use_punct;
  int32_t use_itn;
} EdgevoxOnnxOfflineCohereTranscribeModelConfig;
typedef struct EdgevoxOnnxOfflineFireRedAsrModelConfig {
  const char *encoder;
  const char *decoder;
} EdgevoxOnnxOfflineFireRedAsrModelConfig;
typedef struct EdgevoxOnnxOfflineFireRedAsrCtcModelConfig {
  const char *model;
} EdgevoxOnnxOfflineFireRedAsrCtcModelConfig;
typedef struct EdgevoxOnnxOfflineMoonshineModelConfig {
  const char *preprocessor;
  const char *encoder;
  const char *uncached_decoder;
  const char *cached_decoder;
  const char *merged_decoder;
} EdgevoxOnnxOfflineMoonshineModelConfig;
typedef struct EdgevoxOnnxOfflineTdnnModelConfig {
  const char *model;
} EdgevoxOnnxOfflineTdnnModelConfig;
typedef struct EdgevoxOnnxOfflineLMConfig {
  const char *model;
  float scale;
} EdgevoxOnnxOfflineLMConfig;
typedef struct EdgevoxOnnxOfflineSenseVoiceModelConfig {
  const char *model;
  const char *language;
  int32_t use_itn;
} EdgevoxOnnxOfflineSenseVoiceModelConfig;
typedef struct EdgevoxOnnxOfflineDolphinModelConfig {
  const char *model;
} EdgevoxOnnxOfflineDolphinModelConfig;
typedef struct EdgevoxOnnxOfflineZipformerCtcModelConfig {
  const char *model;
} EdgevoxOnnxOfflineZipformerCtcModelConfig;
typedef struct EdgevoxOnnxOfflineWenetCtcModelConfig {
  const char *model;
} EdgevoxOnnxOfflineWenetCtcModelConfig;
typedef struct EdgevoxOnnxOfflineOmnilingualAsrCtcModelConfig {
  const char *model;
} EdgevoxOnnxOfflineOmnilingualAsrCtcModelConfig;
typedef struct EdgevoxOnnxOfflineFunASRNanoModelConfig {
  const char *encoder_adaptor;
  const char *llm;
  const char *embedding;
  const char *tokenizer;
  const char *system_prompt;
  const char *user_prompt;
  int32_t max_new_tokens;
  float temperature;
  float top_p;
  int32_t seed;
  const char *language;
  int32_t itn;
  const char *hotwords;
} EdgevoxOnnxOfflineFunASRNanoModelConfig;
typedef struct EdgevoxOnnxOfflineQwen3ASRModelConfig {
  const char *conv_frontend;
  const char *encoder;
  const char *decoder;
  const char *tokenizer;
  int32_t max_total_len;
  int32_t max_new_tokens;
  float temperature;
  float top_p;
  int32_t seed;
  const char *hotwords;
} EdgevoxOnnxOfflineQwen3ASRModelConfig;
typedef struct EdgevoxOnnxOfflineMedAsrCtcModelConfig {
  const char *model;
} EdgevoxOnnxOfflineMedAsrCtcModelConfig;
typedef struct EdgevoxOnnxOfflineModelConfig {
  EdgevoxOnnxOfflineTransducerModelConfig transducer;
  EdgevoxOnnxOfflineParaformerModelConfig paraformer;
  EdgevoxOnnxOfflineNemoEncDecCtcModelConfig nemo_ctc;
  EdgevoxOnnxOfflineWhisperModelConfig whisper;
  EdgevoxOnnxOfflineTdnnModelConfig tdnn;
  const char *tokens;
  int32_t num_threads;
  int32_t debug;
  const char *provider;
  const char *model_type;
  const char *modeling_unit;
  const char *bpe_vocab;
  const char *telespeech_ctc;
  EdgevoxOnnxOfflineSenseVoiceModelConfig sense_voice;
  EdgevoxOnnxOfflineMoonshineModelConfig moonshine;
  EdgevoxOnnxOfflineFireRedAsrModelConfig fire_red_asr;
  EdgevoxOnnxOfflineDolphinModelConfig dolphin;
  EdgevoxOnnxOfflineZipformerCtcModelConfig zipformer_ctc;
  EdgevoxOnnxOfflineCanaryModelConfig canary;
  EdgevoxOnnxOfflineWenetCtcModelConfig wenet_ctc;
  EdgevoxOnnxOfflineOmnilingualAsrCtcModelConfig omnilingual;
  EdgevoxOnnxOfflineMedAsrCtcModelConfig medasr;
  EdgevoxOnnxOfflineFunASRNanoModelConfig funasr_nano;
  EdgevoxOnnxOfflineFireRedAsrCtcModelConfig fire_red_asr_ctc;
  EdgevoxOnnxOfflineQwen3ASRModelConfig qwen3_asr;
  EdgevoxOnnxOfflineCohereTranscribeModelConfig cohere_transcribe;
} EdgevoxOnnxOfflineModelConfig;
typedef struct EdgevoxOnnxOfflineTtsVitsModelConfig {
  const char *model;
  const char *lexicon;
  const char *tokens;
  const char *data_dir;
  float noise_scale;
  float noise_scale_w;
  float length_scale;
  const char *dict_dir;
} EdgevoxOnnxOfflineTtsVitsModelConfig;
typedef struct EdgevoxOnnxOfflineTtsMatchaModelConfig {
  const char *acoustic_model;
  const char *vocoder;
  const char *lexicon;
  const char *tokens;
  const char *data_dir;
  float noise_scale;
  float length_scale;
  const char *dict_dir;
} EdgevoxOnnxOfflineTtsMatchaModelConfig;
typedef struct EdgevoxOnnxOfflineTtsKokoroModelConfig {
  const char *model;
  const char *voices;
  const char *tokens;
  const char *data_dir;
  float length_scale;
  const char *dict_dir;
  const char *lexicon;
  const char *lang;
} EdgevoxOnnxOfflineTtsKokoroModelConfig;
typedef struct EdgevoxOnnxOfflineTtsKittenModelConfig {
  const char *model;
  const char *voices;
  const char *tokens;
  const char *data_dir;
  float length_scale;
} EdgevoxOnnxOfflineTtsKittenModelConfig;
typedef struct EdgevoxOnnxOfflineTtsZipvoiceModelConfig {
  const char *tokens;
  const char *encoder;
  const char *decoder;
  const char *vocoder;
  const char *data_dir;
  const char *lexicon;
  const char *espeak_voice;
  float feat_scale;
  float t_shift;
  float target_rms;
  float guidance_scale;
} EdgevoxOnnxOfflineTtsZipvoiceModelConfig;
typedef struct EdgevoxOnnxOfflineTtsPocketModelConfig {
  const char *lm_flow;
  const char *lm_main;
  const char *encoder;
  const char *decoder;
  const char *text_conditioner;
  const char *vocab_json;
  const char *token_scores_json;
  int32_t voice_embedding_cache_capacity;
} EdgevoxOnnxOfflineTtsPocketModelConfig;
typedef struct EdgevoxOnnxOfflineTtsSupertonicModelConfig {
  const char *duration_predictor;
  const char *text_encoder;
  const char *vector_estimator;
  const char *vocoder;
  const char *tts_json;
  const char *unicode_indexer;
  const char *voice_style;
} EdgevoxOnnxOfflineTtsSupertonicModelConfig;
typedef struct EdgevoxOnnxOfflineTtsModelConfig {
  EdgevoxOnnxOfflineTtsVitsModelConfig vits;
  int32_t num_threads;
  int32_t debug;
  const char *provider;
  EdgevoxOnnxOfflineTtsMatchaModelConfig matcha;
  EdgevoxOnnxOfflineTtsKokoroModelConfig kokoro;
  EdgevoxOnnxOfflineTtsKittenModelConfig kitten;
  EdgevoxOnnxOfflineTtsZipvoiceModelConfig zipvoice;
  EdgevoxOnnxOfflineTtsPocketModelConfig pocket;
  EdgevoxOnnxOfflineTtsSupertonicModelConfig supertonic;
} EdgevoxOnnxOfflineTtsModelConfig;
typedef struct EdgevoxOnnxOfflineTtsConfig {
  EdgevoxOnnxOfflineTtsModelConfig model;
  const char *rule_fsts;
  int32_t max_num_sentences;
  const char *rule_fars;
  float silence_scale;
} EdgevoxOnnxOfflineTtsConfig;
typedef struct EdgevoxOnnxGeneratedAudio {
  const float *samples;
  int32_t n;
  int32_t sample_rate;
} EdgevoxOnnxGeneratedAudio;
typedef struct EdgevoxOnnxGenerationConfig {
  float silence_scale;
  float speed;
  int32_t sid;
  const float *reference_audio;
  int32_t reference_audio_len;
  int32_t reference_sample_rate;
  const char *reference_text;
  int32_t num_steps;
  const char *extra;
} EdgevoxOnnxGenerationConfig;
typedef struct EdgevoxOnnxSpeakerEmbeddingExtractorConfig {
  const char *model;
  int32_t num_threads;
  int32_t debug;
  const char *provider;
} EdgevoxOnnxSpeakerEmbeddingExtractorConfig;
typedef struct EdgevoxOnnxOfflineZipformerAudioTaggingModelConfig {
  const char *model;
} EdgevoxOnnxOfflineZipformerAudioTaggingModelConfig;
typedef struct EdgevoxOnnxAudioTaggingModelConfig {
  EdgevoxOnnxOfflineZipformerAudioTaggingModelConfig zipformer;
  const char *ced;
  int32_t num_threads;
  int32_t debug;
  const char *provider;
} EdgevoxOnnxAudioTaggingModelConfig;
typedef struct EdgevoxOnnxAudioTaggingConfig {
  EdgevoxOnnxAudioTaggingModelConfig model;
  const char *labels;
  int32_t top_k;
} EdgevoxOnnxAudioTaggingConfig;
typedef struct EdgevoxOnnxAudioEvent {
  const char *name;
  int32_t index;
  float prob;
} EdgevoxOnnxAudioEvent;
typedef struct EdgevoxOnnxOfflinePunctuationModelConfig {
  const char *ct_transformer;
  int32_t num_threads;
  int32_t debug;
  const char *provider;
} EdgevoxOnnxOfflinePunctuationModelConfig;
typedef struct EdgevoxOnnxOfflinePunctuationConfig {
  EdgevoxOnnxOfflinePunctuationModelConfig model;
} EdgevoxOnnxOfflinePunctuationConfig;
typedef struct EdgevoxOnnxOnlinePunctuationModelConfig {
  const char *cnn_bilstm;
  const char *bpe_vocab;
  int32_t num_threads;
  int32_t debug;
  const char *provider;
} EdgevoxOnnxOnlinePunctuationModelConfig;
typedef struct EdgevoxOnnxOnlinePunctuationConfig {
  EdgevoxOnnxOnlinePunctuationModelConfig model;
} EdgevoxOnnxOnlinePunctuationConfig;
typedef struct EdgevoxOnnxOfflineSpeakerSegmentationPyannoteModelConfig {
  const char *model;
} EdgevoxOnnxOfflineSpeakerSegmentationPyannoteModelConfig;
typedef struct EdgevoxOnnxOfflineSpeakerSegmentationModelConfig {
  EdgevoxOnnxOfflineSpeakerSegmentationPyannoteModelConfig pyannote;
  int32_t num_threads;
  int32_t debug;
  const char *provider;
} EdgevoxOnnxOfflineSpeakerSegmentationModelConfig;
typedef struct EdgevoxOnnxFastClusteringConfig {
  int32_t num_clusters;
  float threshold;
} EdgevoxOnnxFastClusteringConfig;
typedef struct EdgevoxOnnxOfflineSpeakerDiarizationConfig {
  EdgevoxOnnxOfflineSpeakerSegmentationModelConfig segmentation;
  EdgevoxOnnxSpeakerEmbeddingExtractorConfig embedding;
  EdgevoxOnnxFastClusteringConfig clustering;
  float min_duration_on;
  float min_duration_off;
} EdgevoxOnnxOfflineSpeakerDiarizationConfig;
typedef struct EdgevoxOnnxOfflineSpeakerDiarizationSegment {
  float start;
  float end;
  int32_t speaker;
} EdgevoxOnnxOfflineSpeakerDiarizationSegment;
typedef struct EdgevoxOnnxOfflineSpeechDenoiserGtcrnModelConfig {
  const char *model;
} EdgevoxOnnxOfflineSpeechDenoiserGtcrnModelConfig;
typedef struct EdgevoxOnnxOfflineSpeechDenoiserDpdfNetModelConfig {
  const char *model;
} EdgevoxOnnxOfflineSpeechDenoiserDpdfNetModelConfig;
typedef struct EdgevoxOnnxOfflineSpeechDenoiserModelConfig {
  EdgevoxOnnxOfflineSpeechDenoiserGtcrnModelConfig gtcrn;
  int32_t num_threads;
  int32_t debug;
  const char *provider;
  EdgevoxOnnxOfflineSpeechDenoiserDpdfNetModelConfig dpdfnet;
} EdgevoxOnnxOfflineSpeechDenoiserModelConfig;
typedef struct EdgevoxOnnxOfflineSpeechDenoiserConfig {
  EdgevoxOnnxOfflineSpeechDenoiserModelConfig model;
} EdgevoxOnnxOfflineSpeechDenoiserConfig;
typedef struct EdgevoxOnnxDenoisedAudio {
  const float *samples;
  int32_t n;
  int32_t sample_rate;
} EdgevoxOnnxDenoisedAudio;
typedef struct EdgevoxOnnxOnlineSpeechDenoiserConfig {
  EdgevoxOnnxOfflineSpeechDenoiserModelConfig model;
} EdgevoxOnnxOnlineSpeechDenoiserConfig;