flutter/edgevox_onnx/lib/src/edgevox_onnx_bindings.dart

// Copyright (c)  2024  Xiaomi Corporation
import 'dart:ffi';
import 'package:ffi/ffi.dart';

final class EdgevoxOnnxOfflineSpeechDenoiserGtcrnModelConfig extends Struct {
  external Pointer<Utf8> model;
}

final class EdgevoxOnnxOfflineSpeechDenoiserDpdfNetModelConfig extends Struct {
  external Pointer<Utf8> model;
}

final class EdgevoxOnnxOfflineSpeechDenoiserModelConfig extends Struct {
  external EdgevoxOnnxOfflineSpeechDenoiserGtcrnModelConfig gtcrn;

  @Int32()
  external int numThreads;

  @Int32()
  external int debug;

  external Pointer<Utf8> provider;

  external EdgevoxOnnxOfflineSpeechDenoiserDpdfNetModelConfig dpdfnet;
}

final class EdgevoxOnnxOfflineSpeechDenoiserConfig extends Struct {
  external EdgevoxOnnxOfflineSpeechDenoiserModelConfig model;
}

final class EdgevoxOnnxOnlineSpeechDenoiserConfig extends Struct {
  external EdgevoxOnnxOfflineSpeechDenoiserModelConfig model;
}

final class EdgevoxOnnxDenoisedAudio extends Struct {
  external Pointer<Float> samples;

  @Int32()
  external int n;

  @Int32()
  external int sampleRate;
}

final class EdgevoxOnnxSpeakerEmbeddingExtractorConfig extends Struct {
  external Pointer<Utf8> model;

  @Int32()
  external int numThreads;

  @Int32()
  external int debug;

  external Pointer<Utf8> provider;
}

final class EdgevoxOnnxOfflineSpeakerDiarizationSegment extends Struct {
  @Float()
  external double start;

  @Float()
  external double end;

  @Int32()
  external int speaker;
}

final class EdgevoxOnnxOfflineSpeakerSegmentationPyannoteModelConfig
    extends Struct {
  external Pointer<Utf8> model;
}

final class EdgevoxOnnxOfflineSpeakerSegmentationModelConfig extends Struct {
  external EdgevoxOnnxOfflineSpeakerSegmentationPyannoteModelConfig pyannote;

  @Int32()
  external int numThreads;

  @Int32()
  external int debug;

  external Pointer<Utf8> provider;
}

final class EdgevoxOnnxFastClusteringConfig extends Struct {
  @Int32()
  external int numClusters;

  @Float()
  external double threshold;
}

final class EdgevoxOnnxOfflineSpeakerDiarizationConfig extends Struct {
  external EdgevoxOnnxOfflineSpeakerSegmentationModelConfig segmentation;
  external EdgevoxOnnxSpeakerEmbeddingExtractorConfig embedding;
  external EdgevoxOnnxFastClusteringConfig clustering;

  @Float()
  external double minDurationOn;

  @Float()
  external double minDurationOff;
}

final class EdgevoxOnnxOfflinePunctuationModelConfig extends Struct {
  external Pointer<Utf8> ctTransformer;

  @Int32()
  external int numThreads;

  @Int32()
  external int debug;

  external Pointer<Utf8> provider;
}

final class EdgevoxOnnxOfflinePunctuationConfig extends Struct {
  external EdgevoxOnnxOfflinePunctuationModelConfig model;
}

final class EdgevoxOnnxOnlinePunctuationModelConfig extends Struct {
  external Pointer<Utf8> cnnBiLstm;
  external Pointer<Utf8> bpeVocab;
  @Int32()
  external int numThreads;
  @Int32()
  external int debug;
  external Pointer<Utf8> provider;
}

final class EdgevoxOnnxOnlinePunctuationConfig extends Struct {
  external EdgevoxOnnxOnlinePunctuationModelConfig model;
}

final class EdgevoxOnnxOfflineZipformerAudioTaggingModelConfig extends Struct {
  external Pointer<Utf8> model;
}

final class EdgevoxOnnxAudioTaggingModelConfig extends Struct {
  external EdgevoxOnnxOfflineZipformerAudioTaggingModelConfig zipformer;
  external Pointer<Utf8> ced;

  @Int32()
  external int numThreads;

  @Int32()
  external int debug;

  external Pointer<Utf8> provider;
}

final class EdgevoxOnnxAudioTaggingConfig extends Struct {
  external EdgevoxOnnxAudioTaggingModelConfig model;
  external Pointer<Utf8> labels;

  @Int32()
  external int topK;
}

final class EdgevoxOnnxAudioEvent extends Struct {
  external Pointer<Utf8> name;

  @Int32()
  external int index;

  @Float()
  external double prob;
}

final class EdgevoxOnnxOfflineTtsVitsModelConfig extends Struct {
  external Pointer<Utf8> model;
  external Pointer<Utf8> lexicon;
  external Pointer<Utf8> tokens;
  external Pointer<Utf8> dataDir;

  @Float()
  external double noiseScale;

  @Float()
  external double noiseScaleW;

  @Float()
  external double lengthScale;

  external Pointer<Utf8> dictDir;
}

final class EdgevoxOnnxOfflineTtsMatchaModelConfig extends Struct {
  external Pointer<Utf8> acousticModel;
  external Pointer<Utf8> vocoder;
  external Pointer<Utf8> lexicon;
  external Pointer<Utf8> tokens;
  external Pointer<Utf8> dataDir;

  @Float()
  external double noiseScale;

  @Float()
  external double lengthScale;

  external Pointer<Utf8> dictDir;
}

final class EdgevoxOnnxOfflineTtsKokoroModelConfig extends Struct {
  external Pointer<Utf8> model;
  external Pointer<Utf8> voices;
  external Pointer<Utf8> tokens;
  external Pointer<Utf8> dataDir;

  @Float()
  external double lengthScale;
  external Pointer<Utf8> dictDir;
  external Pointer<Utf8> lexicon;
  external Pointer<Utf8> lang;
}

final class EdgevoxOnnxOfflineTtsKittenModelConfig extends Struct {
  external Pointer<Utf8> model;
  external Pointer<Utf8> voices;
  external Pointer<Utf8> tokens;
  external Pointer<Utf8> dataDir;

  @Float()
  external double lengthScale;
}

final class EdgevoxOnnxOfflineTtsZipVoiceModelConfig extends Struct {
  external Pointer<Utf8> tokens;
  external Pointer<Utf8> encoder;
  external Pointer<Utf8> decoder;
  external Pointer<Utf8> vocoder;
  external Pointer<Utf8> dataDir;
  external Pointer<Utf8> lexicon;
  external Pointer<Utf8> espeakVoice;

  @Float()
  external double featScale;

  @Float()
  external double tShift;

  @Float()
  external double targetRms;

  @Float()
  external double guidanceScale;
}

final class EdgevoxOnnxOfflineTtsPocketModelConfig extends Struct {
  external Pointer<Utf8> lmFlow;
  external Pointer<Utf8> lmMain;
  external Pointer<Utf8> encoder;
  external Pointer<Utf8> decoder;
  external Pointer<Utf8> textConditioner;
  external Pointer<Utf8> vocabJson;
  external Pointer<Utf8> tokenScoresJson;

  @Int32()
  external int voiceEmbeddingCacheCapacity;
}

final class EdgevoxOnnxOfflineTtsSupertonicModelConfig extends Struct {
  external Pointer<Utf8> durationPredictor;
  external Pointer<Utf8> textEncoder;
  external Pointer<Utf8> vectorEstimator;
  external Pointer<Utf8> vocoder;
  external Pointer<Utf8> ttsJson;
  external Pointer<Utf8> unicodeIndexer;
  external Pointer<Utf8> voiceStyle;
}

final class EdgevoxOnnxOfflineTtsModelConfig extends Struct {
  external EdgevoxOnnxOfflineTtsVitsModelConfig vits;
  @Int32()
  external int numThreads;

  @Int32()
  external int debug;

  external Pointer<Utf8> provider;
  external EdgevoxOnnxOfflineTtsMatchaModelConfig matcha;
  external EdgevoxOnnxOfflineTtsKokoroModelConfig kokoro;
  external EdgevoxOnnxOfflineTtsKittenModelConfig kitten;
  external EdgevoxOnnxOfflineTtsZipVoiceModelConfig zipvoice;
  external EdgevoxOnnxOfflineTtsPocketModelConfig pocket;
  external EdgevoxOnnxOfflineTtsSupertonicModelConfig supertonic;
}

final class EdgevoxOnnxOfflineTtsConfig extends Struct {
  external EdgevoxOnnxOfflineTtsModelConfig model;
  external Pointer<Utf8> ruleFsts;

  @Int32()
  external int maxNumSenetences;

  external Pointer<Utf8> ruleFars;

  @Float()
  external double silenceScale;
}

final class EdgevoxOnnxGenerationConfig extends Struct {
  @Float()
  external double silenceScale;

  @Float()
  external double speed;

  @Int32()
  external int sid;

  external Pointer<Float> referenceAudio;

  @Int32()
  external int referenceAudioLength;

  @Int32()
  external int referenceSampleRate;

  external Pointer<Utf8> referenceText;

  @Int32()
  external int numSteps;

  external Pointer<Utf8> extra;
}

final class EdgevoxOnnxGeneratedAudio extends Struct {
  external Pointer<Float> samples;

  @Int32()
  external int n;

  @Int32()
  external int sampleRate;
}

final class EdgevoxOnnxFeatureConfig extends Struct {
  @Int32()
  external int sampleRate;

  @Int32()
  external int featureDim;
}

final class EdgevoxOnnxOfflineTransducerModelConfig extends Struct {
  external Pointer<Utf8> encoder;
  external Pointer<Utf8> decoder;
  external Pointer<Utf8> joiner;
}

final class EdgevoxOnnxOfflineParaformerModelConfig extends Struct {
  external Pointer<Utf8> model;
}

final class EdgevoxOnnxOfflineNemoEncDecCtcModelConfig extends Struct {
  external Pointer<Utf8> model;
}

final class EdgevoxOnnxOfflineDolphinModelConfig extends Struct {
  external Pointer<Utf8> model;
}

final class EdgevoxOnnxOfflineZipformerCtcModelConfig extends Struct {
  external Pointer<Utf8> model;
}

final class EdgevoxOnnxOfflineWenetCtcModelConfig extends Struct {
  external Pointer<Utf8> model;
}

final class EdgevoxOnnxOfflineOmnilingualAsrCtcModelConfig extends Struct {
  external Pointer<Utf8> model;
}

final class EdgevoxOnnxOfflineMedAsrCtcModelConfig extends Struct {
  external Pointer<Utf8> model;
}

final class EdgevoxOnnxOfflineFireRedAsrCtcModelConfig extends Struct {
  external Pointer<Utf8> model;
}

final class EdgevoxOnnxOfflineFunAsrNanoModelConfig extends Struct {
  external Pointer<Utf8> encoderAdaptor;
  external Pointer<Utf8> llm;
  external Pointer<Utf8> embedding;
  external Pointer<Utf8> tokenizer;
  external Pointer<Utf8> systemPrompt;
  external Pointer<Utf8> userPrompt;

  @Int32()
  external int maxNewTokens;

  @Float()
  external double temperature;

  @Float()
  external double topP;

  @Int32()
  external int seed;

  external Pointer<Utf8> language;

  @Int32()
  external int itn;

  external Pointer<Utf8> hotwords;
}

final class EdgevoxOnnxOfflineQwen3AsrModelConfig extends Struct {
  external Pointer<Utf8> convFrontend;
  external Pointer<Utf8> encoder;
  external Pointer<Utf8> decoder;
  external Pointer<Utf8> tokenizer;

  @Int32()
  external int maxTotalLen;

  @Int32()
  external int maxNewTokens;

  @Float()
  external double temperature;

  @Float()
  external double topP;

  @Int32()
  external int seed;

  external Pointer<Utf8> hotwords;
}

final class EdgevoxOnnxOfflineWhisperModelConfig extends Struct {
  external Pointer<Utf8> encoder;
  external Pointer<Utf8> decoder;
  external Pointer<Utf8> language;
  external Pointer<Utf8> task;

  @Int32()
  external int tailPaddings;

  @Int32()
  external int enableTokenTimestamps;

  @Int32()
  external int enableSegmentTimestamps;
}

final class EdgevoxOnnxOfflineCanaryModelConfig extends Struct {
  external Pointer<Utf8> encoder;
  external Pointer<Utf8> decoder;
  external Pointer<Utf8> srcLang;
  external Pointer<Utf8> tgtLang;

  @Int32()
  external int usePnc;
}

final class EdgevoxOnnxOfflineCohereTranscribeModelConfig extends Struct {
  external Pointer<Utf8> encoder;
  external Pointer<Utf8> decoder;
  external Pointer<Utf8> language;

  @Int32()
  external int usePunct;

  @Int32()
  external int useItn;
}

final class EdgevoxOnnxOfflineMoonshineModelConfig extends Struct {
  external Pointer<Utf8> preprocessor;
  external Pointer<Utf8> encoder;
  external Pointer<Utf8> uncachedDecoder;
  external Pointer<Utf8> cachedDecoder;
  external Pointer<Utf8> mergedDecoder;
}

final class EdgevoxOnnxOfflineFireRedAsrModelConfig extends Struct {
  external Pointer<Utf8> encoder;
  external Pointer<Utf8> decoder;
}

final class EdgevoxOnnxOfflineTdnnModelConfig extends Struct {
  external Pointer<Utf8> model;
}

final class EdgevoxOnnxOfflineSenseVoiceModelConfig extends Struct {
  external Pointer<Utf8> model;
  external Pointer<Utf8> language;

  @Int32()
  external int useInverseTextNormalization;
}

final class EdgevoxOnnxOfflineLMConfig extends Struct {
  external Pointer<Utf8> model;

  @Float()
  external double scale;
}

final class EdgevoxOnnxOfflineModelConfig extends Struct {
  external EdgevoxOnnxOfflineTransducerModelConfig transducer;
  external EdgevoxOnnxOfflineParaformerModelConfig paraformer;
  external EdgevoxOnnxOfflineNemoEncDecCtcModelConfig nemoCtc;
  external EdgevoxOnnxOfflineWhisperModelConfig whisper;
  external EdgevoxOnnxOfflineTdnnModelConfig tdnn;

  external Pointer<Utf8> tokens;
